.k8s/overlays/prod/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: external-access
spec:
  hosts: # Change this
    - ryan-schaefer.mids255.com
  gateways: # Change this
    - istio-ingress/ryan-schaefer-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: backend-main-service
            port:
              number: 8000
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-service
            port:
              number: 80
